[Fix] Ref #4946 - Build Warning Color-contrast

--- a/app/Resources/assets/css/global.scss
+++ b/app/Resources/assets/css/global.scss
@@ -29,8 +29,6 @@ $sesile-color: (
         gray-blue: #404257
 );
 
-$label-color: #FFFFFF;
-$label-color-alt: #FFFFFF;
 $label-radius: 0.3em;
 @import url(https://fonts.googleapis.com/css?family=Lato:300,700);
 @import "./../../../../node_modules/foundation-sites/scss/foundation";
